# reason-react-hn-melange

./: .gitignore  .prettierignore  Makefile  README.md  dune  dune-project  index.html  melange-opam-template.opam  package-lock.json  package.json  reason-react-hn-melange.opam  tailwind.config.js  vite.config.js
.github/workflows/: build-sample-project.yml
src/: App.re  App.rei  CommentList.re  CommentList.rei  CommentsPage.re  CommentsPage.rei  Heading.re  Heading.rei  Index.re  Link.re  Link.rei  NotFound.re  StoryListItem.re  StoryListItem.rei  TopStories.re  dune  utils.re
src/story/: data.re  data.reiasdad  dune
src/texts/: dune  heading_texts.re
src/world/: world.ml
