;; we start by ignoring node_modules. if you need to consume an OCaml
;; project from `node_modules`, this should work:
;; - remove the `dirs` stanza below
;; - add a `(subdir node_modules (dirs only_your_package))`

;; (dirs :standard \ node_modules)

(subdir
 node_modules
 (dirs @glennsl bs-fetch bs-webapi)
 (subdir
  @glennsl/bs-json/src
  (library
   (name bs_json)
   (wrapped false)
   (modes melange)))
 (subdir
  bs-fetch/src
  (library
   ; double underscore to not match the module Bs_fetch so that Fetch__Iterator is exposed
   (name bs__fetch)
   (wrapped false)
   (modes melange)))
 (subdir
  bs-webapi
  (vendored_dirs src)
  (subdir
   src
   (include_subdirs unqualified)
   (library
    (name webapi)
    (modes melange)
    (libraries bs__fetch)
    (preprocess
     (pps melange.ppx))))))
