(subdir
 node_modules
 (dirs @glennsl bs-webapi)
 (subdir
  @glennsl/bs-json/src
  (library
   (name bs_json)
   (wrapped false)
   (modes melange)))
 (subdir
  bs-webapi
  (vendored_dirs src)
  (subdir
   src
   (include_subdirs unqualified)
   (library
    (name webapi)
    (modes melange)
    (libraries melange-fetch)
    (preprocess
     (pps melange.ppx))))))
