(lang dune 3.8)

(using melange 0.1)

(name reason-react-hn-melange)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/reason-react-hn-melange)

(bug_reports https://github.com/psb/reason-react-hn-melange/issues)

(package
 (allow_empty)
 (name reason-react-hn-melange)
 (synopsis "Reason React Hacker News with Melange")
 (description
  "A port of the original Reason React Hacker News app to use Melange"))
