opam-version: "2.0"
synopsis: "Reason React HN App with Melange"
description: "A port of the original Reason React Hacker News app to use Melange"
maintainer: ["Paul Bacchus"]
authors: ["Paul Bacchus, and the contributors to the original app"]
license: "MIT"
homepage: "https://github.com/psb/reason-react-hn-melange"
bug-reports: "https://github.com/psb/reason-react-hn-melange/issues"
depends: [
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "dune" {>= "3.8"}
  "melange" {>= "1.0.0"}
  "reactjs-jsx-ppx" {>= "1.0.0"}
  "reason-react" {= "0.11.0"}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
  "ocamlformat" {with-dev-setup}
  "melange-fetch" {dev}
]
pi-depends: [
    ["melange.fetch.dev" "git+https://github.com/melange-community/melange-fetch.git#master"]
]
dev-repo: "git+https://github.com/psb/reason-react-hn-melange.git"
